--- a/_config.yml
+++ b/_config.yml
@@ -21,16 +21,13 @@
 title: "tomaustindev"
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Thomas Rhys Austin's professional portfolio.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://tomaustindev.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  tomaustindev
 
 # Build settings
-theme: minima
+theme: jekyll-theme-so-simple
 plugins:
   - jekyll-feed
 
