Fixed config to use non-supported theme.

--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,10 @@ url: "https://tomaustindev.github.io" # the base hostname & protocol for your si
 github_username:  tomaustindev
 
 # Build settings
-theme: jekyll-theme-so-simple
+remote_theme: mmistakes/so-simple-theme
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
